# freq-pick

./: AGENTS.md  README.md  main.py  pyproject.toml
artifacts/: demo_overlay_pick.json  demo_pick.json  demo_spectrum.npz
docs/: agent_executor_instructions_v_1.md  gotchas.md  handoff-260223-1.md  handoff_260224_1_freq_pick.md  monkey_test.md  progress_tracker.csv  python_toolbox.md  wishlist_from_wav-to-freq.md
docs/old_handoffs/: handoff_260220_1.md
docs/realease/: 0.1.3.md  0.1.4.md  0.1.5.md
scripts/: make_fixture.py  run_picker_demo.py  run_picker_demo_foo.py
src/freq_pick/: __init__.py  __main__.py  artifacts.py  cli.py  core.py  mpl_ui.py
tests/: test_artifacts.py  test_cli_title_append.py  test_context_overlays.py  test_display_conversion.py  test_headless_png.py  test_snap.py  test_title_compose.py  test_toggle.py
