[project]
name = "freq-pick"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib",
    "numpy",
]

[project.scripts]
freq-pick = "freq_pick.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["freq_pick"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/freq_pick/**",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "produm>=0.1.2",
    "pytest>=9.0.2",
]
