[project]
name = "freq-pick"
version = "0.1.4"
description = "Interactive frequency picker for a single spectrum"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib",
    "numpy",
]

[project.scripts]
freq-pick = "freq_pick.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freq_pick"]

[tool.hatch.build.targets.sdist]
include = [
    "src/freq_pick/**",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "produm>=0.1.2",
    "pytest>=9.0.2",
]
